<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="app_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEdtWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:ems="15"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwEdtWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdtWrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:ems="15"
            android:hint="Password (Min. 6 characters)"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/changePwVisibility"
        android:layout_width="30dp"
        android:layout_height="36dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/showpassword"
        app:layout_constraintBottom_toBottomOf="@+id/pwEdtWrapper"
        app:layout_constraintEnd_toEndOf="@+id/pwEdtWrapper"
        app:layout_constraintTop_toTopOf="@+id/pwEdtWrapper" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupBtn"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwEdtWrapper" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:textColor="#303C6C" />

        <TextView
            android:id="@+id/space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#303C6C" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Sign in."
            android:textColor="#ec7423"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/adminSignUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click here to sign up as an admin"
        android:textColor="#303C6C"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>