...
        android:src="@drawable/showpassword"
        app:layout_constraintBottom_toBottomOf="@+id/pwEdtWrapper"
        app:layout_constraintEnd_toEndOf="@+id/pwEdtWrapper"
        app:layout_constraintTop_toTopOf="@+id/pwEdtWrapper" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="SIGN IN"
        android:textColor="@color/white"
...
