...
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameEdtWrapper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adminSignUpKeyEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:ems="15"
                android:hint="Authorisation Token"
                android:inputType="text"
...
